--- a/Engeula.html
+++ b/Engeula.html
@@ -103,7 +103,7 @@
     <a href="#">Sign Up</a>
     <a href="#" id="email-link">Send Email</a>
     <a href="https://yuuseibe.github.io/endula/eula.html">Japanace</a>
-    <button onclick="downloadDiscordInstaller()">Download Discord</button>
+    <a onclick="downloadDiscordInstaller()">Download Discord</button>
     <a href="https://yuuseibe.github.io/opreport/out.html#home">Report Abuse</a>  
   </header>
   
